--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-
+{
+    "name": "a04-RupertoM",
+    "version": "1.0.0",
+    "description": "Set up web API using module produced in a03.",
+    "main": "server.js",
+    "type": "module",
+    "scripts": {
+      "test": "node server.js --port=5555"
+    },
+    "author": "RupertoM",
+    "license": "GPL-3.0-or-later",
+    "dependencies": {
+      "express": "^4.18.2",
+      "minimist": "^1.2.8"
+    },
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/comp426-2023-spring/a04-RupertoM.git"
+    }
+  }
